objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alicuota__c</fullName>
        <description>Overall Tax Rate applicable to the Product</description>
        <label>Alicuota</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.105</fullName>
                </value>
                <value>
                    <fullName>0.21</fullName>
                    <default>true</default>
                    <label>0.21</label>
                </value>
                <value>
                    <fullName>0.255</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codigo_Movimiento_Inventario__c</fullName>
        <label>Codigo Movimiento Inventario</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Sistema_Origen__c</fullName>
        <description>Product Code in the External Source System</description>
        <externalId>true</externalId>
        <inlineHelpText>Product Code in the External Source Catalog System, to be used by Catalog Synchronization tools</inlineHelpText>
        <label>Codigo Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAN_IntegrationKey__c</fullName>
        <description>External id to exchange data with other systems (example, Huawei, SAP, Infotainment).</description>
        <externalId>true</externalId>
        <label>FAN Integration Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ID_Sistema_Origen__c</fullName>
        <description>Product ID in the External Source Catalog System</description>
        <externalId>true</externalId>
        <inlineHelpText>Product ID in the External Source Catalog System, for reference in Catalog Synchronization tools.</inlineHelpText>
        <label>ID Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_Text__c</fullName>
        <formula>IF( IsActive , &quot;SÍ&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activo fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <description>Marca</description>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TELECOM Personal</fullName>
                </value>
                <value>
                    <fullName>Gemalto</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Motorola</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Arnet</fullName>
                </value>
                <value>
                    <fullName>MarcaPrueba1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NMU__c</fullName>
        <description>Unique product identifier for TA</description>
        <externalId>true</externalId>
        <label>NMU</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Sistema_Origen__c</fullName>
        <description>Product Name in the External Source Catalog System</description>
        <inlineHelpText>Product Name in the External Source Catalog System</inlineHelpText>
        <label>Nombre Sistema Origen</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrefaRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Telecom Argentina Prefeasibility processes require a Flag to identify which products require a Prefeasibility analysis</description>
        <inlineHelpText>Telecom Argentina Prefeasibility processes require a Flag to identify which products require a Prefeasibility analysis</inlineHelpText>
        <label>PrefaRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Categoria__c</fullName>
        <label>Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__productoGeneradoPorDelta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>productoGeneradoPorDelta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIM_Type__c</fullName>
        <label>SIM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Micro</fullName>
                </value>
                <value>
                    <fullName>Nano</fullName>
                </value>
                <value>
                    <fullName>Troquelado</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_Origen__c</fullName>
        <description>Name of the Source Catalog System</description>
        <inlineHelpText>Name of the Source Catalog System, used for Catalog synchronization</inlineHelpText>
        <label>Sistema Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Infotainment</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceOrgProductId__c</fullName>
        <label>SourceOrgProductId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Custom_Description__c</fullName>
        <description>To allow entering custom promotion description or any other marketing snippet. If entered, it should show up in catalog panel with a different color (Per UI/UX wireframe).</description>
        <inlineHelpText>This is used to display any special message in &quot;green&quot; in CPQ catalog panel on top of the standard product description.</inlineHelpText>
        <label>TA Custom Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TA_Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si un producto es tangible o no</description>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Bien_de_Uso__c</fullName>
        <label>Tipo de Bien de Uso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tangible</fullName>
                </value>
                <value>
                    <fullName>Intangible</fullName>
                </value>
                <value>
                    <fullName>Servicio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>icon__c</fullName>
        <label>icon</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedOn__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeRules__c</fullName>
        <label>Attribute Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryData__c</fullName>
        <description>Data about the Catalogs/Categories that this product belongs to, stored in JSON format.</description>
        <label>Category Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChangeDetectorImplementation__c</fullName>
        <description>Name of implementation which will be used by Change Detector in XOM</description>
        <inlineHelpText>Name of implementation which will be used by Change Detector in XOM</inlineHelpText>
        <label>ChangeDetectorImplementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For product spec and commercial offer types of records, identifies the class of this product spec or offer.</description>
        <label>Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Class)</relationshipLabel>
        <relationshipName>ClassProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product. Used to identify the Product across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique product identifier can be used.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HeaderData__c</fullName>
        <description>Stores the headers for Matrix is stored as a JSON.</description>
        <inlineHelpText>Stores the headers for Matrix is stored as a JSON.</inlineHelpText>
        <label>Header Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImageId__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing a denormalized representation of the product&apos;s Vlocity Attribute values and configuration metadata.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <description>Safety buffer before the committed date</description>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For classes (Product2 records with record type Class), this identifies the parent class when this is a subclass.</description>
        <label>Parent Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subclasses</relationshipLabel>
        <relationshipName>Subclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For commercial offers, this identifies the product specification on which this offer is based.</description>
        <label>Product Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>ProductSpecOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductTemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Based on Template</relationshipLabel>
        <relationshipName>ProductTemplateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                    <default>true</default>
                    <label>Order Item</label>
                </value>
                <value>
                    <fullName>Downstream Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecificationType__c</fullName>
        <description>For product spec types of records, identifies the type of specification such as product spec, resource spec or service spec.</description>
        <label>Specification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Repair Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <description>Product Sub Type can be used to drive implementations/engines, as well as filtering products in the Catalog/Pricebook.  These values may be constrained by the Product Type. If Product Type = &quot;Product&quot; then these values are shown. For Product Type = &quot;Product Bundle&quot; the Sub Type may be NULL</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Troquelado</fullName>
                </value>
                <value>
                    <fullName>VOZ</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>Datos</fullName>
                </value>
                <value>
                    <fullName>Transferencia de Llamada</fullName>
                </value>
                <value>
                    <fullName>Identificacion de Llamadas</fullName>
                </value>
                <value>
                    <fullName>Ring Back Tones</fullName>
                </value>
                <value>
                    <fullName>Llamada en Espera</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>OTT</fullName>
                </value>
                <value>
                    <fullName>Combinado</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Segmentada</fullName>
                </value>
                <value>
                    <fullName>Credito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeToLive__c</fullName>
        <label>Time To Live</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackAsAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if product needs to be tracked as part of agreement</description>
        <label>Track As Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Product Type can be used to drive eligibility/compatibility/recommendations/other implementations</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Gemalto</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>TELECOM PERSONAL</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>FixedLine</fullName>
                    <label>Línea Fija</label>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                    <label>Línea Móvil</label>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Servicio Valor Agregado</fullName>
                </value>
                <value>
                    <fullName>Plan Prepago</fullName>
                </value>
                <value>
                    <fullName>Plan Pospago</fullName>
                </value>
                <value>
                    <fullName>Plan Hibrido</fullName>
                </value>
                <value>
                    <fullName>Servicio GSM</fullName>
                </value>
                <value>
                    <fullName>Numeros Amigos</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Reseteo de Cuota</fullName>
                </value>
                <value>
                    <fullName>Control Cuota Datos</fullName>
                </value>
                <value>
                    <fullName>Simcard</fullName>
                </value>
                <value>
                    <fullName>Recarga</fullName>
                </value>
                <value>
                    <fullName>Credito Adicional</fullName>
                </value>
                <value>
                    <fullName>Roaming</fullName>
                </value>
                <value>
                    <fullName>Dispositivo</fullName>
                </value>
                <value>
                    <fullName>Prestamo</fullName>
                </value>
                <value>
                    <fullName>Proteccion</fullName>
                </value>
                <value>
                    <fullName>Captura</fullName>
                </value>
                <value>
                    <fullName>Pack LDI</fullName>
                </value>
                <value>
                    <fullName>Pack Roaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VendorAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED from 888.83</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__SubType__c</columns>
        <columns>vlocity_cmt__ObjectTypeId__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los productos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProducts3</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>HAS_DEF_QTY_SCHEDULE</columns>
        <columns>HAS_DEF_REV_SCHEDULE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.QTY_SCHEDULE_ENABLED</columns>
        <columns>PRODUCT2.REV_SCHEDULE_ENABLED</columns>
        <columns>PRODUCT2.QTY_SCHEDULE_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Vista Supplementary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Devices</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Device</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.vlocity_cmt__Product</value>
        </filters>
        <label>Devices</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductTemplate</fullName>
        <active>true</active>
        <label>Product Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SCP_Certa_GC__Solo_editable_por_duenio</fullName>
        <active>false</active>
        <errorConditionFormula>(CreatedBy.Id &lt;&gt; $User.Id) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorMessage>Solo el dueño del registro puede editar un producto.</errorMessage>
    </validationRules>
</CustomObject>